--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine-ts"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jasmine": "^3.6.2",
+    "@types/selenium-webdriver": "^4.0.11",
     "chromedriver": "^87.0.1",
     "jasmine": "^3.6.3",
-    "selenium-webdriver": "^4.0.0-alpha.7"
+    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-ts": "^0.3.0",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "ts-node": "^9.1.1",
+    "typescript": "4.1.3"
   }
 }
