--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jasmine": "^3.6.3",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
+    "looks-same": "^7.3.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "ts-node": "^9.1.1",
     "typescript": "4.1.3"
